CB-4643 Create module for status syncer

--- a/settings.gradle
+++ b/settings.gradle
@@ -57,3 +57,4 @@ include 'authorization-common'
 include 'idbmms-connector'
 include 'authorization-common-api'
 include 'cluster-dns-connector'
+include 'status-checker'
